# ActionPlatformer

./: .clang-tidy  .clangd  .gitignore  .gitmodules  ActionPlatformer.rar  CMakeLists.txt  README.md  conanfile.py  settings_example.json
Configs/: debug.json
Localization/en/: strings.json
Localization/ru/: strings.json
Resources/: GeneralCharacterList.txt
Resources/Animations/Char1/air_attack/: air_attack.json
Resources/Animations/Char1/attack1_chain/: attack1_chain.json
Resources/Animations/Char1/landing_recovery/: landing_recovery.json
Resources/Animations/Char1/particles/air_attack_trace/: air_attack_trace.json
Resources/Animations/Char1/particles/attack1_chain_trace/: attack1_chain_trace.json
Resources/Animations/Char1/particles/attack1_trace/: attack1_trace.json
Resources/Animations/Char1/particles/particle_land/: particle_land.json
Resources/Animations/Char1/particles/particle_run/: particle_run.json
Resources/Animations/Char1/particles/particle_run_loop/: particle_run_loop.json
Resources/Animations/Char1/particles/particle_wall_slide/: particle_wall_slide.json
Resources/Animations/Char1/wall_prejump/: wall_prejump.json
Resources/Animations/Enemy1/idle/: idle.json
Resources/Animations/Enemy1/run/: run.json
Resources/Animations/Environment/grass_single_top_flickR/: grass_single_top_flickR.json
Resources/Sprites/Char1/: FloatCling.panm  WallCling.panm  air_attack.panm  attack1.panm  attack1_1.panm  attack1_2.panm  attack1_chain.panm  float.panm  idle.panm  prejump.panm  run.panm  wall_cling.panm  wall_prejump.panm
Resources/Sprites/Char1/attack1/: attack1.json
Resources/Sprites/Char1/float/: float.json
Resources/Sprites/Char1/particles/: air_attack_trace.panm  attack1_chain_trace.panm  attack1_trace.panm  particle_jump.panm  particle_land.panm  particle_run.panm  particle_run_loop.panm  particle_wall_jump.panm  particle_wall_slide.panm
Resources/Sprites/Char1/particles/particle_jump/: particle_jump.json
Resources/Sprites/Char1/particles/particle_wall_jump/: particle_wall_jump.json
Resources/Sprites/Char1/prejump/: prejump.json
Resources/Sprites/Char1/run/: run.json
Resources/Sprites/Char1/wall_cling/: wall_cling.json
Resources/Sprites/Enemy1/: float.panm  idle.panm  landing_recovery.panm  prejump.panm  prerun.panm  run.panm  run_recovery.panm  wall_cling.panm  wall_prejump.panm
Resources/Sprites/Enemy1/idle/: idle.json
Resources/Sprites/Enemy1/particles/: particle_jump.panm  particle_run.panm  particle_wall_jump.panm
Resources/Sprites/Enemy1/prerun/: prerun.json
Resources/Sprites/Enemy1/run_recovery/: run_recovery.json
Resources/Sprites/Environment/: grass_single_top.panm  grass_single_top_flickL.panm  grass_single_top_flickR.panm
Resources/Sprites/Environment/grass_single_top/: grass_single_top.json
Resources/Sprites/Environment/grass_single_top_flickL/: grass_single_top_flickL.json
Resources/Sprites/Environment/grass_single_top_flickR/: grass_single_top_flickR.json
Resources/Sprites/Tiles/: map.json  tilemap.json
Resources/Sprites/UI/: heart.panm
Resources/Sprites/UI/heart/: heart_.json
Tilemaps/: ColliderKeyPoint.tx  ColliderKeyPointLoopBack.tx  EnvTiles.json  FocusArea.tx  Level1.json  tilemap.json  tiles.json  utilObjects.json  utilObjects32x16.json
src/: AISystem.cpp  AISystem.h  Action.hpp  ActionCharacter.hpp  BattleLevel.cpp  BattleLevel.h  BattleSystem.cpp  BattleSystem.h  CMakeLists.txt  CameraSystem.cpp  CameraSystem.h  ChatBox.cpp  ChatBox.h  ColliderRouting.cpp  ColliderRouting.h  CommonAI.cpp  CommonAI.h  DebugPlayerWidget.cpp  DebugPlayerWidget.h  DecorLayers.cpp  DecorLayers.h  DecorLayers.hpp  DecorationBuilder.cpp  DecorationBuilder.h  DynamicColliderSystem.cpp  DynamicColliderSystem.h  Enemy1.cpp  Enemy1.h  EnemySystem.cpp  EnemySystem.h  EnvComponents.cpp  EnvComponents.h  EnvironmentSystem.cpp  EnvironmentSystem.h  GameData.h  HUDSystem.cpp  HUDSystem.h  Hit.cpp  Hit.h  InputHandlingSystem.cpp  (+40 more)
src/Core/: AnimationManager.cpp  AnimationManager.h  Application.cpp  Application.h  Application.hpp  Archetype.hpp  Behavior.cpp  Behavior.hpp  CMakeLists.txt  CallChain.h  CallChain.hpp  Camera.cpp  Camera.h  CameraFocusArea.cpp  CameraFocusArea.h  Collider.cpp  Collider.h  CollisionArea.cpp  CollisionArea.h  ComponentEntity.hpp  Configuration.cpp  Configuration.h  CoreComponents.cpp  CoreComponents.h  DebugDataWidget.cpp  DebugDataWidget.h  EngineAnimation.cpp  EngineAnimation.h  EnumMapping.hpp  FPSUtility.cpp  FPSUtility.h  FilesystemUtils.cpp  FilesystemUtils.h  FixedQueue.hpp  FrameTimer.cpp  FrameTimer.h  GameData.h  ImmediateScreenLog.cpp  ImmediateScreenLog.h  ImmediateScreenLog.hpp  (+64 more)
src/Core/ECS/: ComponentExtractor.cpp  ComponentExtractor.h  ComponentExtractor.hpp  ComponentRegistry.cpp  ComponentRegistry.h  ComponentRegistry.hpp
src/Core/Localization/: LocalizationGen.cpp  LocalizationGen.h  genLocalization.py
src/Core/Shader/: Circle.frag  Rect.frag  Rect.vert  Screen.frag  Screen.vert  Sprite.frag  Sprite.vert  SpriteFlash.frag  SpriteFlashBlends  SpriteOutlined.frag  SpriteRotate.vert  Tilemap.vert
src/Core/glad/: glad.h
src/tests/: ComponentExtraction.hpp  IterationComparison.hpp  NewStateMachine.hpp
